JavaScript30 - 22 - Scoped to page ID, Resolve syntax, Z-index issue

--- a/src/assets/scss/components/javascript30/_22-follow-along-link-highlighter.scss
+++ b/src/assets/scss/components/javascript30/_22-follow-along-link-highlighter.scss
@@ -25,12 +25,12 @@
     
     .highlight {
         transition: all 0.2s;
-        border-bottom: 2px solid white;
+        border-bottom: 2px solid $white;
         position: absolute;
         top: 0;
-        background: white;
+        background-color: $white;
         left: 0;
-        z-index: -1;
+        z-index: 0;
         border-radius: 20px;
         display: block;
         box-shadow: 0 0 10px rgba(0,0,0,0.2);
